[tool.poetry]
name = "docker-flask-server"
version = "0.1.0"
description = "A stupid example of running a Flask server in Synology NAS"
authors = ["Wells Oliver <wells.oliver@gmail.com>" ]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
